--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ APP_URL=
 
 VIEW_CACHE_DISABLED=true
 DB_DRIVER=mysql
-DB_DATABASE=tictactoe3
-DB_PASWORD = kolkijn123
-DB_USER = root
-DB_HOST =  
-DB_POST = 3306
+DB_DATABASE=heroku_c22c0f074effb38
+DB_PASWORD=acf8d538
+DB_USER=b2453981080c01
+DB_HOST=us-cdbr-iron-east-03.cleardb.net
+DB_POST=3306
